--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: libfm 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-11 15:20+0200\n"
-"PO-Revision-Date: 2014-01-14 16:26+0000\n"
+"PO-Revision-Date: 2014-01-17 22:18+0000\n"
 "Last-Translator: Dar_Kuntu <ZAck13@gmx.at>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: de\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1389716812.0\n"
+"X-POOTLE-MTIME: 1389997115.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -752,14 +752,12 @@ msgid "_Cancel"
 msgstr "_Abbrechen"
 
 #: ../src/gtk/fm-dnd-dest.c:413
-#, fuzzy
 msgid "C_opy Here"
-msgstr "Kopiraj _sem"
+msgstr "K_opieren"
 
 #: ../src/gtk/fm-dnd-dest.c:414
-#, fuzzy
 msgid "_Move Here"
-msgstr "Premakni s_em"
+msgstr "_Verschieben"
 
 #. Note to translators: Link in not noun but verb here
 #: ../src/gtk/fm-dnd-dest.c:416
@@ -783,9 +781,8 @@ msgid "Open _With"
 msgstr "Öffnen _mit"
 
 #: ../src/gtk/fm-file-menu.c:158
-#, fuzzy
 msgid "Copy Pa_th(s)"
-msgstr "Copiar ru_ta(s)"
+msgstr "_Dateipfad kopieren"
 
 #: ../src/gtk/fm-file-menu.c:159
 msgid "H_ide"
@@ -800,9 +797,8 @@ msgid "_Add to Bookmarks"
 msgstr "_Zu Lesezeichen hinzufügen"
 
 #: ../src/gtk/fm-file-menu.c:162
-#, fuzzy
 msgid "_Rename..."
-msgstr "_Renombrar…"
+msgstr "_Umbenennen…"
 
 #: ../src/gtk/fm-file-menu.c:163
 msgid "Co_mpress..."
@@ -822,14 +818,13 @@ msgstr "_Dateieigenschaften"
 
 #. Note to translators: Trash in not noun but verb here
 #: ../src/gtk/fm-file-menu.c:265 ../src/gtk/fm-file-menu.c:525
-#, fuzzy
 msgid "Move to _Trash"
-msgstr "Premakni v _smeti"
+msgstr "_Löschen"
 
+# because of duplette -> free translation
 #: ../src/gtk/fm-file-menu.c:773
-#, fuzzy
 msgid "Your bookmarks already have a bookmark for this folder."
-msgstr "Esta carpeta ya está incluida en los marcadores."
+msgstr "Deine Lesezeichen haben bereits einen Eintrag für diesen Ordner."
 
 #: ../src/gtk/fm-file-properties.c:368
 msgid "Image files"
@@ -842,9 +837,9 @@ msgstr[0] "Byte"
 msgstr[1] "Bytes"
 
 #: ../src/gtk/fm-file-properties.c:510
-#, c-format, fuzzy
+#, c-format
 msgid "scanning... %d"
-msgstr "explorando… %d"
+msgstr "untersuchen… %d"
 
 #: ../src/gtk/fm-file-properties.c:588
 msgid "Please enter a valid user name or numeric id."
@@ -881,9 +876,8 @@ msgstr ""
 "beginnt('.'). Umschalten auf ausgeblendete Dateien anzeigen mit <Ctrl+H> "
 
 #: ../src/gtk/fm-file-properties.c:1026
-#, fuzzy
 msgid "scanning..."
-msgstr "explorando…"
+msgstr "untersuchen…"
 
 #: ../src/gtk/fm-file-properties.c:1088
 msgid "<b>_Access content:</b>"
@@ -1110,9 +1104,8 @@ msgid "Folder location bar"
 msgstr "Adressleiste"
 
 #: ../src/gtk/fm-places-model.c:762 ../src/gtk/fm-places-model.c:976
-#, fuzzy
 msgid "Home Folder"
-msgstr "Domača mapa"
+msgstr "Benutzerordner"
 
 #: ../src/gtk/fm-places-model.c:778 ../src/gtk/fm-places-model.c:984
 msgid "Desktop"
@@ -1124,9 +1117,8 @@ msgid "Applications"
 msgstr "Anwendungen"
 
 #: ../src/gtk/fm-places-model.c:812 ../src/gtk/fm-places-model.c:990
-#, fuzzy
 msgid "Filesystem Root"
-msgstr "Koren datotečnega sistema"
+msgstr "Stammverzeichnis"
 
 #: ../src/gtk/fm-places-view.c:131
 msgid "_Mount Volume"
@@ -1203,18 +1195,17 @@ msgstr ""
 "geändert: %s"
 
 #: ../src/gtk/fm-progress-dlg.c:326
-#, fuzzy
 msgid "<b>Errors occured before file operation was stopped.</b>"
-msgstr "<b>Se produjeron errores antes de detener la operación.</b>"
+msgstr ""
+"<b>Fehler sind aufgetreten bevor die Dateioperationen angehalten wurden.</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:328
 msgid "Cancelled"
 msgstr "Abgebrochen"
 
 #: ../src/gtk/fm-progress-dlg.c:332
-#, fuzzy
 msgid "<b>The file operation was completed with errors.</b>"
-msgstr "<b>Se completó la operación con errores.</b>"
+msgstr "<b>Die Dateioperation wurde mit Fehlern abgeschlossen.</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:334
 msgid "Finished"
@@ -1244,44 +1235,38 @@ msgstr ", "
 
 #. translators: it is part of "Moving files:" or "Moving xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:581
-#, fuzzy
 msgid "Moving"
-msgstr "Moviendo"
+msgstr "Verschieben von"
 
 #. translators: it is part of "Copying files:" or "Copying xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:585
-#, fuzzy
 msgid "Copying"
-msgstr "Copiando"
+msgstr "Kopieren von"
 
 #. translators: it is part of "Trashing files:" or "Trashing xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:589
-#, fuzzy
 msgid "Trashing"
-msgstr "Moviendo a la papelera"
+msgstr "Löschen von"
 
 #. translators: it is part of "Deleting files:" or "Deleting xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:593
-#, fuzzy
 msgid "Deleting"
-msgstr "Eliminando"
+msgstr "Löschen von"
 
-# Verknüpfung oder Link?
+# Wenn man im Deutschen von Link spricht, meint man den Hyperlink auf Webseiten -> Verknüpfung
 #. translators: it is part of "Creating link /path/xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:597
-#, fuzzy
 msgid "Creating link"
-msgstr "Symbolische Verknüpfung werden erstellt"
+msgstr "Verknüpfung erstellen"
 
 #. translators: 'In:' string is followed by destination folder path
 #: ../src/gtk/fm-progress-dlg.c:599
-#, fuzzy
 msgid "<b>In:</b>"
 msgstr "<b>Nach:</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:600
 msgid "Creating links to files"
-msgstr ""
+msgstr "Verknüpfung zu Dateien erstellen"
 
 #. translators: it is part of "Changing attributes of xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:607
@@ -1289,9 +1274,8 @@ msgid "Changing attributes of"
 msgstr "Attribute ändern von"
 
 #: ../src/gtk/fm-progress-dlg.c:608
-#, fuzzy
 msgid "Changing attributes of files"
-msgstr "Attribute ändern von"
+msgstr "Attribute von Dateien ändern"
 
 #. translators: it is part of "Restoring files:" or "Restoring xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:614
@@ -1305,21 +1289,20 @@ msgid "%s files"
 msgstr "%s Dateien"
 
 #: ../src/gtk/fm-progress-dlg.c:627
-#, fuzzy
 msgid "<b>File operation is in progress...</b>"
-msgstr "<b>Operación en progreso…</b>"
+msgstr "<b>Dateioperation in Durchführung...</b>"
 
 #. note to translators: resulting string is such as "Deleting file"
 #: ../src/gtk/fm-progress-dlg.c:633
-#, c-format, fuzzy
+#, c-format
 msgid "<b>%s file:</b>"
-msgstr "<b>%s el archivo:</b>"
+msgstr "<b>%s Datei:</b>"
 
 #. note to translators: resulting string is such as "Deleting files"
 #: ../src/gtk/fm-progress-dlg.c:636
-#, c-format, fuzzy
+#, c-format
 msgid "<b>%s files:</b>"
-msgstr "<b>%s los archivos:</b>"
+msgstr "<b>%s Dateien:</b>"
 
 #: ../src/gtk/fm-side-pane.c:66
 msgid "_Off"
@@ -1355,9 +1338,8 @@ msgid "_Hide %s"
 msgstr "%1 _verstecken"
 
 #: ../src/gtk/fm-standard-view.c:839
-#, fuzzy
 msgid "_Move Left"
-msgstr "Premakni _levo"
+msgstr "_Bewegen nach links"
 
 #: ../src/gtk/fm-standard-view.c:845
 #, fuzzy
@@ -1370,9 +1352,8 @@ msgid "Show %s"
 msgstr "%s anzeigen"
 
 #: ../src/gtk/fm-standard-view.c:880
-#, fuzzy
 msgid "_Forget Width"
-msgstr "Pozabi _širino"
+msgstr "Breite _vergessen"
 
 #: ../src/gtk/fm-standard-view.c:1854
 msgid "_Icon View"
@@ -1553,14 +1534,12 @@ msgid "Search"
 msgstr "Suchen"
 
 #: ../src/modules/vfs-search.c:1052
-#, fuzzy
 msgid "Search Results"
-msgstr "Rezultati iskanja"
+msgstr "Suchergebnisse"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:66
-#, fuzzy
 msgid "Choose Executable File"
-msgstr "Izberite izvedljivo datoteko"
+msgstr "Ausführbare Datei wählen"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:72
 msgid "Executable files"
@@ -1591,14 +1570,12 @@ msgid "The working directory to run the program in"
 msgstr "Das Arbeitsverzeichnis, in dem das Programm ausgeführt werden soll"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:359
-#, fuzzy
 msgid "<b>_Tooltip:</b>"
 msgstr "<b>_Tooltip:</b>"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:369
-#, fuzzy
 msgid "Tooltip to show on application"
-msgstr "Tooltips, die in der Anwendung angezeigt werden sollen"
+msgstr "Tooltip an der Anwendung anzeigen"
 
 #. TODO: handle "TryExec" field ?
 #. row 7: "StartupNotify" GtkCheckButton
