--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: libfm 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-11 15:20+0200\n"
-"PO-Revision-Date: 2014-01-17 22:18+0000\n"
+"PO-Revision-Date: 2014-01-17 22:23+0000\n"
 "Last-Translator: Dar_Kuntu <ZAck13@gmx.at>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: de\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1389997115.0\n"
+"X-POOTLE-MTIME: 1389997430.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -1339,12 +1339,11 @@ msgstr "%1 _verstecken"
 
 #: ../src/gtk/fm-standard-view.c:839
 msgid "_Move Left"
-msgstr "_Bewegen nach links"
+msgstr "Bewegen nach _Links"
 
 #: ../src/gtk/fm-standard-view.c:845
-#, fuzzy
 msgid "Move _Right"
-msgstr "Premakni _desno"
+msgstr "Bewegen nach _Rechts"
 
 #: ../src/gtk/fm-standard-view.c:868
 #, c-format
