--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: LibFM 1.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-01-09 09:02+0100\n"
-"PO-Revision-Date: 2013-12-17 14:22+0000\n"
+"POT-Creation-Date: 2014-01-11 15:20+0200\n"
+"PO-Revision-Date: 2014-01-21 05:50+0000\n"
 "Last-Translator: wwycheuk <wwycheuk@gmail.com>\n"
 "Language-Team: zh_TW <zh_TW@li.org>\n"
 "Language: zh_TW\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1387290142.0\n"
+"X-POOTLE-MTIME: 1390283425.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -24,7 +24,7 @@ msgstr "偏好的應用程式"
 
 #: ../data/libfm-pref-apps.desktop.in.h:2
 msgid "Select applications called on click on Web link or e-mail address"
-msgstr ""
+msgstr "選取當點擊網頁連結或電郵位址時開啟的應用程式"
 
 #: ../data/lxshortcut.desktop.in.h:1
 msgid "Shortcut Editor"
@@ -95,12 +95,10 @@ msgid "C_ustom Command Line"
 msgstr "自訂指令列(_U)"
 
 #: ../data/ui/app-chooser.glade.h:17
-#, fuzzy
 msgid "_Set selected application as default action for this file type"
-msgstr "將選取的應用程式設定為這類型檔案的預設處理程式(_S)"
+msgstr "將所選應用程式設定為此類型檔案的預設處理程式(_S)"
 
 #: ../data/ui/ask-rename.glade.h:1
-#, fuzzy
 msgid "Confirm File Replacing"
 msgstr "確認取代檔案"
 
@@ -197,31 +195,26 @@ msgid "Select the application used to open files of this type "
 msgstr "選取用來開啟這類型檔案的應用程式"
 
 #: ../data/ui/file-prop.glade.h:9
-#, fuzzy
 msgid "<b>Total count of files:</b>"
-msgstr "<b>檔案大小總計：</b>"
+msgstr "<b>檔案總數：</b>"
 
 #: ../data/ui/file-prop.glade.h:10
 msgid "<b>Total size of files:</b>"
 msgstr "<b>檔案大小總計：</b>"
 
 #: ../data/ui/file-prop.glade.h:11
-#, fuzzy
 msgid "<b>Size on disk:</b>"
 msgstr "<b>磁碟上的大小：</b>"
 
 #: ../data/ui/file-prop.glade.h:12
-#, fuzzy
 msgid "<b>Last modification:</b>"
 msgstr "<b>最後修改：</b>"
 
 #: ../data/ui/file-prop.glade.h:13
-#, fuzzy
 msgid "<b>Last access:</b>"
 msgstr "<b>最後存取：</b>"
 
 #: ../data/ui/file-prop.glade.h:14
-#, fuzzy
 msgid "<b>Last permissions change:</b>"
 msgstr "<b>最後權限變更：</b>"
 
@@ -310,7 +303,6 @@ msgid "Sticky & set GID"
 msgstr "駐留(Sticky)及設定 GID"
 
 #: ../data/ui/file-prop.glade.h:35
-#, fuzzy
 msgctxt "this is a file access mode bit, also known as 'suid'"
 msgid "Set UID"
 msgstr "設定 UID"
@@ -320,16 +312,16 @@ msgid "Set UID & GID"
 msgstr "設定 UID 及 GID"
 
 #: ../data/ui/file-prop.glade.h:37
-#, fuzzy
 msgctxt ""
 "this is a file access mode - only owner can access the file, for others "
 "access is denied"
 msgid "Only owner"
-msgstr "只有擁有者"
+msgstr "僅擁有者"
 
 #: ../data/ui/file-prop.glade.h:38
+#, fuzzy
 msgid "Only owner and group"
-msgstr "只有擁有者及群組"
+msgstr "僅擁有者"
 
 #: ../data/ui/file-prop.glade.h:39
 msgid "Anyone"
@@ -373,10 +365,11 @@ msgid "<b>File _Name Patterns:</b>"
 msgstr "<b>檔案名稱式樣(_N)：</b>"
 
 #: ../data/ui/filesearch.glade.h:9
+#, fuzzy
 msgid ""
 "Pattern may be either POSIX shell pattern list (with ',' as separator) or "
 "POSIX regular expression."
-msgstr ""
+msgstr "式樣可以是 POSIX shell 式樣清單 (以半形逗號 (,) 分隔) 或 POSIX 正規表示式。"
 
 #: ../data/ui/filesearch.glade.h:10
 msgid "Case insensiti_ve"
@@ -431,19 +424,18 @@ msgid "_Documents"
 msgstr "文件(_D)"
 
 #: ../data/ui/filesearch.glade.h:23
-#, fuzzy
 msgid "Folde_rs"
-msgstr "資料夾"
+msgstr "資料夾(_R)"
 
 #: ../data/ui/filesearch.glade.h:24
 msgid "Ot_her:"
-msgstr ""
+msgstr "其他(_H)："
 
 #: ../data/ui/filesearch.glade.h:25
 msgid ""
 "Any valid content type can be entered here. Wildcard '*' is allowed at end "
 "of the type. Multiple types should be separated with ';'."
-msgstr ""
+msgstr "可以在此輸入任何有效的內容類型。類型結尾可以使用萬用字元(*)。多種類型可以半形分號(;)分隔。"
 
 #: ../data/ui/filesearch.glade.h:26
 msgid "File _Type"
@@ -499,16 +491,14 @@ msgid "The preferred Web Browser will be used to open hyperlinks."
 msgstr "會用偏好的網頁瀏覽器來開啟超連結"
 
 #: ../data/ui/preferred-apps.glade.h:4
-#, fuzzy
 msgid "<b>Mail Client</b>"
-msgstr "<b>郵件軟體</b>"
+msgstr "<b>郵件用戶端</b>"
 
 #: ../data/ui/preferred-apps.glade.h:5
-#, fuzzy
 msgid ""
 "The preferred Mail Client will be used to compose emails when you click on e-"
 "mail addresses."
-msgstr "當點擊電子郵件位址時，會用偏好的郵件軟體來編輯信件。"
+msgstr "當點擊電子郵件位址時，會用偏好的郵件用戶端軟體來撰寫信件。"
 
 #: ../data/ui/preferred-apps.glade.h:6
 msgid "<b>Terminal Emulator</b>"
@@ -541,7 +531,6 @@ msgid "<b>Time remaining:</b>"
 msgstr "<b>剩餘時間：</b>"
 
 #: ../data/ui/progress.glade.h:6
-#, fuzzy
 msgid "<b>Errors occurred:</b>"
 msgstr "<b>有錯誤發生：</b>"
 
@@ -551,9 +540,9 @@ msgid "Invalid desktop entry file: '%s'"
 msgstr "桌面項目檔案：「%s」無效"
 
 #: ../src/base/fm-file-launcher.c:240
-#, fuzzy, c-format
+#, c-format, c-format
 msgid "No default application is set to launch URIs %s://"
-msgstr "未有設定用來開啟 URI %s:// 的應用程式"
+msgstr "未有設定用來開啟 URI %s:// 的預設應用程式"
 
 #: ../src/base/fm-file-launcher.c:308
 #, c-format
@@ -561,7 +550,7 @@ msgid "Cannot set working directory to '%s': %s"
 msgstr "不能將工作目錄切換至「%s」：%s"
 
 #: ../src/base/fm-file-launcher.c:355
-#, fuzzy, c-format
+#, c-format, c-format
 msgid "Could not determine content type of file '%s' to launch it"
 msgstr "無法判斷「%s」檔案的內容類型，故無法開啟"
 
@@ -573,7 +562,7 @@ msgstr "未有為 MIME 類型 %s 設定預設應用程式"
 #: ../src/base/fm-path.c:177 ../src/gtk/fm-places-model.c:829
 #: ../src/gtk/fm-places-model.c:997
 msgid "Devices"
-msgstr ""
+msgstr "裝置"
 
 #: ../src/base/fm-path.c:183 ../src/gtk/fm-places-model.c:847
 #: ../src/gtk/fm-places-model.c:1012
@@ -585,7 +574,6 @@ msgid "Trash Can"
 msgstr "垃圾桶"
 
 #: ../src/base/fm-mime-type.c:86
-#, fuzzy
 msgid "shortcut to URI"
 msgstr "至 URI 的捷徑"
 
@@ -594,7 +582,6 @@ msgid "fm_template_create_file: invalid argument"
 msgstr "fm_template_create_file：引數無效"
 
 #: ../src/base/fm-terminal.c:248
-#, fuzzy
 msgid "No terminal emulator is set in libfm config"
 msgstr "libfm 配置未有設定終端機模擬器"
 
@@ -640,14 +627,14 @@ msgstr "URI 子路徑「%s」包含的溢出字元無效"
 #: ../src/extra/fm-xml-file.c:205
 #, c-format
 msgid "Duplicate handler for tag <%s>"
-msgstr ""
+msgstr "標記 <%s> 的處理程式重覆"
 
 #: ../src/extra/fm-xml-file.c:299
 #, c-format
 msgid ""
 "Failed to parse '%-.*s', which should have been a digit inside a character "
 "reference (&#234; for example) - perhaps the digit is too large"
-msgstr ""
+msgstr "未能解析「%-.*s」，其應該是字元引用中的數字 (如 &#234;) - 可能該數字太大了"
 
 #: ../src/extra/fm-xml-file.c:310
 #, c-format
@@ -678,9 +665,7 @@ msgstr ""
 msgid ""
 "Entity did not end with a semicolon; most likely you used an ampersand "
 "character without intending to start an entity - escape ampersand as &amp;"
-msgstr ""
-"實體並非以分號結尾；很可能您想使用 & 字符但未將它變為實體 ─ 請將 & 轉換為 "
-"&amp;"
+msgstr "實體並非以分號結尾；很可能您想使用 & 字符但未將它變為實體 ─ 請將 & 轉換為 &amp;"
 
 #: ../src/extra/fm-xml-file.c:594
 msgid "Space isn't allowed in the close tag"
@@ -694,17 +679,17 @@ msgstr ""
 #: ../src/extra/fm-xml-file.c:619
 #, c-format
 msgid "Element '%s' was closed but the currently open element is '%s'"
-msgstr ""
+msgstr "元素「%s」已結束，但目前開啟的元素是「%s」"
 
 #: ../src/extra/fm-xml-file.c:675
 #, c-format
 msgid "Invalid char '%c' at start of attribute value"
-msgstr ""
+msgstr "屬性值開頭有無效字元「%c」"
 
 #: ../src/extra/fm-xml-file.c:686
 #, c-format
 msgid "Invalid char '%c' at end of attribute value, expected '%c'"
-msgstr ""
+msgstr "屬性值結尾有無效字元「%c」，應為「%c」"
 
 #: ../src/extra/fm-xml-file.c:834
 msgid "Document ended unexpectedly"
@@ -776,7 +761,7 @@ msgstr "以其他程式開啟(_W)..."
 #: ../src/gtk/fm-file-menu.c:153
 #, fuzzy
 msgid "Open _With"
-msgstr "以其他程式開啟(_W)..."
+msgstr "以其他程式開啟(_W)："
 
 #: ../src/gtk/fm-file-menu.c:158
 msgid "Copy Pa_th(s)"
@@ -795,7 +780,6 @@ msgid "_Add to Bookmarks"
 msgstr "新增到書籤(_A)"
 
 #: ../src/gtk/fm-file-menu.c:162
-#, fuzzy
 msgid "_Rename..."
 msgstr "重新命名(_R)..."
 
@@ -817,9 +801,8 @@ msgstr "特性(_E)"
 
 #. Note to translators: Trash in not noun but verb here
 #: ../src/gtk/fm-file-menu.c:265 ../src/gtk/fm-file-menu.c:525
-#, fuzzy
 msgid "Move to _Trash"
-msgstr "移至回收筒(_T)"
+msgstr "丟到垃圾桶(_T)"
 
 #: ../src/gtk/fm-file-menu.c:773
 msgid "Your bookmarks already have a bookmark for this folder."
@@ -837,7 +820,7 @@ msgstr[0] "位元組"
 #: ../src/gtk/fm-file-properties.c:510
 #, c-format
 msgid "scanning... %d"
-msgstr ""
+msgstr "正在掃描... %d"
 
 #: ../src/gtk/fm-file-properties.c:588
 msgid "Please enter a valid user name or numeric id."
@@ -865,28 +848,25 @@ msgstr "此為隱藏檔，因為其名稱以「點號」(.) 開首。"
 msgid ""
 "Files on this system are hidden if their name starts with a dot ('.'). Hit "
 "<Ctrl+H> to toggle displaying hidden files."
-msgstr ""
-"本系統的檔案若其名稱以「點號」(.) 就表示其為隱藏檔。按 <Ctrl+H> 切換是否顯示"
-"隱藏檔。"
+msgstr "本系統的檔案若其名稱以「點號」(.) 就表示其為隱藏檔。按 <Ctrl+H> 切換是否顯示隱藏檔。"
 
 #: ../src/gtk/fm-file-properties.c:1026
-#, fuzzy
 msgid "scanning..."
-msgstr "載入中..."
+msgstr "正在掃描..."
 
 #: ../src/gtk/fm-file-properties.c:1088
 msgid "<b>_Access content:</b>"
 msgstr "<b>存取內容(_A)：</b>"
 
-#: ../src/gtk/fm-file-properties.c:1242
+#: ../src/gtk/fm-file-properties.c:1239
 msgid "Files of different types"
 msgstr "多種不同類型的檔案"
 
-#: ../src/gtk/fm-file-properties.c:1286
+#: ../src/gtk/fm-file-properties.c:1283
 msgid "<b>File:</b>"
 msgstr "<b>檔案：</b>"
 
-#: ../src/gtk/fm-file-properties.c:1352
+#: ../src/gtk/fm-file-properties.c:1349
 #, fuzzy
 msgid "Multiple files"
 msgstr "多個檔案"
@@ -1062,13 +1042,13 @@ msgstr "只有系統管理員有權限進行這項操作。"
 #: ../src/gtk/fm-gtk-utils.c:923
 #, c-format
 msgid "Do you want to move the file '%s' to trash can?"
-msgstr "要將「%s」檔案移到垃圾桶嗎？"
+msgstr "要將「%s」檔案丟到垃圾桶嗎？"
 
 #: ../src/gtk/fm-gtk-utils.c:928
 #, c-format
 msgid "Do you want to move the %d selected file to trash can?"
 msgid_plural "Do you want to move the %d selected files to trash can?"
-msgstr[0] "要將選取的 %d 個檔案移到垃圾桶嗎？"
+msgstr[0] "要將選取的 %d 個檔案丟到垃圾桶嗎？"
 
 #: ../src/gtk/fm-gtk-utils.c:988
 #, c-format
@@ -1116,7 +1096,6 @@ msgid "Applications"
 msgstr "應用程式"
 
 #: ../src/gtk/fm-places-model.c:812 ../src/gtk/fm-places-model.c:990
-#, fuzzy
 msgid "Filesystem Root"
 msgstr "檔案系統根目錄"
 
@@ -1141,9 +1120,8 @@ msgid "_Rename Bookmark Item"
 msgstr "重新命名書籤項目(_R)"
 
 #: ../src/gtk/fm-places-view.c:151
-#, fuzzy
 msgid "Re_move from Bookmarks"
-msgstr "從書籤刪除(_M)"
+msgstr "從書籤移除(_M)"
 
 #: ../src/gtk/fm-places-view.c:152
 msgid "Move Bookmark _Up"
@@ -1195,16 +1173,15 @@ msgstr ""
 
 #: ../src/gtk/fm-progress-dlg.c:326
 msgid "<b>Errors occured before file operation was stopped.</b>"
-msgstr ""
+msgstr "<b>檔案操作停止前出現了錯誤。</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:328
 msgid "Cancelled"
 msgstr "已取消"
 
 #: ../src/gtk/fm-progress-dlg.c:332
-#, fuzzy
 msgid "<b>The file operation was completed with errors.</b>"
-msgstr "檔案操作已取消，且過程中有錯誤發生。"
+msgstr "<b>檔案操作完成，但過程中有錯誤發生。</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:334
 msgid "Finished"
@@ -1216,7 +1193,7 @@ msgid ""
 "don't support this operation.\n"
 "Do you want to delete them instead?"
 msgstr ""
-"因為檔案系統不支援，有些檔案無法移到垃圾桶\n"
+"因為檔案系統不支援，有些檔案無法丟到垃圾桶\n"
 "是否直接刪除這些檔案？"
 
 #: ../src/gtk/fm-progress-dlg.c:397 ../src/gtk/fm-progress-dlg.c:528
@@ -1232,67 +1209,81 @@ msgid ", "
 msgstr "、"
 
 #. translators: it is part of "Moving files:" or "Moving xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:579
-#, fuzzy
+#: ../src/gtk/fm-progress-dlg.c:581
 msgid "Moving"
-msgstr "正在移動檔案"
+msgstr "正在移動"
 
 #. translators: it is part of "Copying files:" or "Copying xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:583
-#, fuzzy
+#: ../src/gtk/fm-progress-dlg.c:585
 msgid "Copying"
-msgstr "正在複製檔案"
+msgstr "正在複製"
 
 #. translators: it is part of "Trashing files:" or "Trashing xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:587
-#, fuzzy
+#: ../src/gtk/fm-progress-dlg.c:589
 msgid "Trashing"
-msgstr "正將檔案移到垃圾桶"
+msgstr "正在丟到垃圾桶"
 
 #. translators: it is part of "Deleting files:" or "Deleting xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:591
-#, fuzzy
+#: ../src/gtk/fm-progress-dlg.c:593
 msgid "Deleting"
-msgstr "正在刪除檔案"
+msgstr "正在刪除"
 
-#. translators: it is part of "Symlinking files:" or "Symlinking xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:595
-msgid "Symlinking"
+#. translators: it is part of "Creating link /path/xxx.txt"
+#: ../src/gtk/fm-progress-dlg.c:597
+#, fuzzy
+msgid "Creating link"
+msgstr "建立連結"
+
+#. translators: 'In:' string is followed by destination folder path
+#: ../src/gtk/fm-progress-dlg.c:599
+#, fuzzy
+msgid "<b>In:</b>"
+msgstr "<b>到：</b>"
+
+#: ../src/gtk/fm-progress-dlg.c:600
+msgid "Creating links to files"
 msgstr ""
 
-#. translators: it is part of "Changing attributes of files:" or "Changing attributes of xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:602
+#. translators: it is part of "Changing attributes of xxx.txt"
+#: ../src/gtk/fm-progress-dlg.c:607
 #, fuzzy
 msgid "Changing attributes of"
 msgstr "變更檔案屬性"
 
+#: ../src/gtk/fm-progress-dlg.c:608
+#, fuzzy
+msgid "Changing attributes of files"
+msgstr "變更檔案屬性"
+
 #. translators: it is part of "Restoring files:" or "Restoring xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:606
+#: ../src/gtk/fm-progress-dlg.c:614
 #, fuzzy
 msgid "Restoring"
 msgstr "復原(_R)"
 
 #. note to translators: resulting string is such as "Deleting files"
-#: ../src/gtk/fm-progress-dlg.c:613
+#: ../src/gtk/fm-progress-dlg.c:624
+#, c-format
 #, fuzzy, c-format
 msgid "%s files"
 msgstr "圖片檔案"
 
-#: ../src/gtk/fm-progress-dlg.c:615
+#: ../src/gtk/fm-progress-dlg.c:627
 msgid "<b>File operation is in progress...</b>"
 msgstr ""
 
 #. note to translators: resulting string is such as "Deleting file"
-#: ../src/gtk/fm-progress-dlg.c:619
+#: ../src/gtk/fm-progress-dlg.c:633
+#, c-format
 #, fuzzy, c-format
 msgid "<b>%s file:</b>"
 msgstr "<b>檔案：</b>"
 
 #. note to translators: resulting string is such as "Deleting files"
-#: ../src/gtk/fm-progress-dlg.c:622
-#, fuzzy, c-format
+#: ../src/gtk/fm-progress-dlg.c:636
+#, c-format, c-format
 msgid "<b>%s files:</b>"
-msgstr "<b>檔案：</b>"
+msgstr "<b>%s 個檔案：</b>"
 
 #: ../src/gtk/fm-side-pane.c:66
 msgid "_Off"
@@ -1328,12 +1319,10 @@ msgid "_Hide %s"
 msgstr "隱藏(_H) %s"
 
 #: ../src/gtk/fm-standard-view.c:839
-#, fuzzy
 msgid "_Move Left"
 msgstr "左移(_M)"
 
 #: ../src/gtk/fm-standard-view.c:845
-#, fuzzy
 msgid "Move _Right"
 msgstr "右移(_R)"
 
@@ -1343,7 +1332,6 @@ msgid "Show %s"
 msgstr "顯示 %s"
 
 #: ../src/gtk/fm-standard-view.c:880
-#, fuzzy
 msgid "_Forget Width"
 msgstr "忘記寬度(_F)"
 
@@ -1424,7 +1412,7 @@ msgstr "XML 檔案「%s」出錯 (%d:%d)："
 
 #: ../src/modules/vfs-menu.c:309
 msgid "XML file doesn't contain Applications root"
-msgstr ""
+msgstr "XML 檔案未包含應用程式根節點"
 
 #: ../src/modules/vfs-menu.c:384 ../src/modules/vfs-menu.c:464
 #: ../src/modules/vfs-menu.c:568 ../src/modules/vfs-menu.c:682
@@ -1509,7 +1497,7 @@ msgstr "選單目錄的名稱不能以 \".desktop\" 結尾"
 
 #: ../src/modules/vfs-menu.c:2617
 msgid "Invalid operation with menu root"
-msgstr ""
+msgstr "對選單頂層的操作無效"
 
 #: ../src/modules/vfs-menu.c:2706
 msgid "Invalid destination"
@@ -1578,7 +1566,6 @@ msgid "_Use startup notification"
 msgstr "使用啟動通知(_U)"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:388
-#, fuzzy
 msgid "_Desktop Entry"
 msgstr "桌面項目(_D)"
 
@@ -1591,7 +1578,6 @@ msgid "Restore trashed files to original paths"
 msgstr "將刪除的檔案還原到原來位置"
 
 #: ../src/tools/lxshortcut.c:42
-#, fuzzy
 msgid "source file name or desktop id"
 msgstr "來源檔案名稱或桌面ID"
 
