--- a/po/lg.po
+++ b/po/lg.po
@@ -2,13 +2,12 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: LibFM 1.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-01-09 09:02+0100\n"
-"PO-Revision-Date: 2013-09-04 21:41+0000\n"
+"POT-Creation-Date: 2014-01-11 15:20+0200\n"
+"PO-Revision-Date: 2014-01-21 23:11+0000\n"
 "Last-Translator: kizito <kbirabwa@yahoo.co.uk>\n"
 "Language-Team: lg <kbirabwa@yahoo.co.uk>\n"
 "Language: lg\n"
@@ -17,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1378330872.0\n"
+"X-POOTLE-MTIME: 1390345885.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -36,7 +35,6 @@ msgid "Create new or change existing desktop entry"
 msgstr "Kolawo oba kyusa ekisangibwa awakolerwa"
 
 #: ../data/ui/app-chooser.glade.h:1
-#, fuzzy
 msgid "Choose Application"
 msgstr "Londa puloguramu"
 
@@ -45,9 +43,8 @@ msgid "Use selected application to open files"
 msgstr "Fayiro zibikkuze puloguramu erondedwa"
 
 #: ../data/ui/app-chooser.glade.h:3
-#, fuzzy
 msgid "_Installed Applications"
-msgstr "_Puloguramu ewangidwa ku kompyuta"
+msgstr "_Puloguramu eziri ku kompyuta"
 
 #: ../data/ui/app-chooser.glade.h:4
 msgid "<b>C_ommand line to execute:</b>"
@@ -88,7 +85,8 @@ msgstr ""
 #: ../data/ui/app-chooser.glade.h:14
 msgid "<b>_Application name (optional, set it to keep association)</b>"
 msgstr ""
-"<b>_Linnya lya puloguramu (osobola okutegeka eno ebe nga bulijjo y'ekola)</b>"
+"<b>_Linnya lya puloguramu (osobola okutegeka eno ebe nga bulijjo "
+"y'ekola)</b>"
 
 #: ../data/ui/app-chooser.glade.h:15
 msgid "Execute custom command line to open files"
@@ -99,12 +97,10 @@ msgid "C_ustom Command Line"
 msgstr "W_andika Ekiragiriro Kya mu Kiwandikiro Ekikyo"
 
 #: ../data/ui/app-chooser.glade.h:17
-#, fuzzy
 msgid "_Set selected application as default action for this file type"
 msgstr "Puloguramu erondedwa _y,eba ekola ku fayiro ez'ekika kino bulijjo"
 
 #: ../data/ui/ask-rename.glade.h:1
-#, fuzzy
 msgid "Confirm File Replacing"
 msgstr "Kakasa nti fayiro ezisangidwawo za kugyibwawo"
 
@@ -135,7 +131,6 @@ msgid "with the following file?"
 msgstr "waddewo fayiro eno?"
 
 #: ../data/ui/ask-rename.glade.h:9
-#, fuzzy
 msgid "_File name:"
 msgstr "_Erinnya lya fayiro:"
 
@@ -190,7 +185,6 @@ msgid "<b>Target file:</b>"
 msgstr "<b>Fayiro ey'ekigenderwa:</b>"
 
 #: ../data/ui/file-prop.glade.h:6
-#, fuzzy
 msgid "<b>File type:</b>"
 msgstr "<b>Kika kya fayiro:</b>"
 
@@ -203,34 +197,28 @@ msgid "Select the application used to open files of this type "
 msgstr "Londa puloguramu enaakozesebwanga okubikkula fayiro ez'ekika kino "
 
 #: ../data/ui/file-prop.glade.h:9
-#, fuzzy
 msgid "<b>Total count of files:</b>"
-msgstr "<b>Obunene obw'endagiriro ya fayiro:</b>"
+msgstr "<b>Mugatte gwa fayiro:</b>"
 
 #: ../data/ui/file-prop.glade.h:10
-#, fuzzy
 msgid "<b>Total size of files:</b>"
-msgstr "<b>Obunene obw'endagiriro ya fayiro:</b>"
+msgstr "<b>Mugatte gwa bunene bwa fayiro:</b>"
 
 #: ../data/ui/file-prop.glade.h:11
-#, fuzzy
 msgid "<b>Size on disk:</b>"
-msgstr "<b>Ebbanga eritwalibwa ku disiki:</b>"
+msgstr "<b>Bbanga eritwalibwa ku disiki:</b>"
 
 #: ../data/ui/file-prop.glade.h:12
-#, fuzzy
 msgid "<b>Last modification:</b>"
 msgstr "<b>Amakyuka agaasemba:</b>"
 
 #: ../data/ui/file-prop.glade.h:13
-#, fuzzy
 msgid "<b>Last access:</b>"
 msgstr "<b>Amabikkula agaasemba:</b>"
 
 #: ../data/ui/file-prop.glade.h:14
-#, fuzzy
 msgid "<b>Last permissions change:</b>"
-msgstr "<b>Ndukusa Lwe Zaasemba Kukyusibwamu:</b>"
+msgstr "<b>Ndukusa lwe zaasemba kukyusibwamu:</b>"
 
 #: ../data/ui/file-prop.glade.h:15
 msgid "_General"
@@ -301,12 +289,11 @@ msgid "None"
 msgstr "Bwereere"
 
 #: ../data/ui/file-prop.glade.h:32
-#, fuzzy
 msgctxt ""
 "It is a directory access bit - 'sticky' - where only owner can delete a file "
 "from it"
 msgid "Sticky"
-msgstr "Olukusa olw'obwanannyini"
+msgstr "Lukusa lw'obwa nannyini"
 
 #: ../data/ui/file-prop.glade.h:33
 msgid "Set GID"
@@ -317,10 +304,9 @@ msgid "Sticky & set GID"
 msgstr "Olukusa olw'obwanannyini n'olukusa oluyingiza mu guluupu"
 
 #: ../data/ui/file-prop.glade.h:35
-#, fuzzy
 msgctxt "this is a file access mode bit, also known as 'suid'"
 msgid "Set UID"
-msgstr "Olukusa olwazika UID"
+msgstr "Olukusa olweyazika UID"
 
 #: ../data/ui/file-prop.glade.h:36
 msgid "Set UID & GID"
@@ -328,7 +314,6 @@ msgstr ""
 "Olukusa olwazika obuyinza bwa nnyini fayiro n'olukusa oluyingiza mu guluupu"
 
 #: ../data/ui/file-prop.glade.h:37
-#, fuzzy
 msgctxt ""
 "this is a file access mode - only owner can access the file, for others "
 "access is denied"
@@ -364,9 +349,8 @@ msgid "GB"
 msgstr "GB"
 
 #: ../data/ui/filesearch.glade.h:5
-#, fuzzy
 msgid "Choose Date"
-msgstr "Londa olunaku"
+msgstr "Londa Lunaku"
 
 #: ../data/ui/filesearch.glade.h:6
 msgid "Choose a date from the following calendar"
@@ -439,9 +423,8 @@ msgid "_Documents"
 msgstr "_Biwandike"
 
 #: ../data/ui/filesearch.glade.h:23
-#, fuzzy
 msgid "Folde_rs"
-msgstr "Tterekero"
+msgstr "M_aterekero"
 
 #: ../data/ui/filesearch.glade.h:24
 msgid "Ot_her:"
@@ -507,9 +490,8 @@ msgid "The preferred Web Browser will be used to open hyperlinks."
 msgstr "Ekyandaaza ky'olonzemu kye kinaakozesebwanga okukebera ennyunzi."
 
 #: ../data/ui/preferred-apps.glade.h:4
-#, fuzzy
 msgid "<b>Mail Client</b>"
-msgstr "<b>Puloguramu eya email</b>"
+msgstr "<b>Puloguramu eya Email</b>"
 
 #: ../data/ui/preferred-apps.glade.h:5
 #, fuzzy
@@ -753,6 +735,7 @@ msgid "Customize"
 msgstr "Wekyusize"
 
 #: ../src/gtk/fm-app-chooser-dlg.c:266
+#, c-format
 #, fuzzy, c-format
 msgid "<b>Select an application to open \"%s\" files</b>"
 msgstr "Fayiro zibikkuze puloguramu erondedwa"
@@ -871,7 +854,7 @@ msgstr[1] "bayiti"
 #: ../src/gtk/fm-file-properties.c:510
 #, c-format
 msgid "scanning... %d"
-msgstr ""
+msgstr "nkebera... %d"
 
 #: ../src/gtk/fm-file-properties.c:588
 msgid "Please enter a valid user name or numeric id."
@@ -885,8 +868,7 @@ msgstr "Wandika erinnya oba namba ya guluupu ebikkirizibwa."
 #: ../src/gtk/fm-file-properties.c:827
 msgid ""
 "Do you want to recursively apply these changes to all files and sub-folders?"
-msgstr ""
-"Enkyuka zino nzikole ku fayiro zonna n'amaterekero agali munda mu lino?"
+msgstr "Enkyuka zino nzikole ku fayiro zonna n'amaterekero agali munda mu lino?"
 
 #: ../src/gtk/fm-file-properties.c:960
 msgid "Hide or unhide the file"
@@ -907,24 +889,22 @@ msgstr ""
 "amapeesa aga <Ctrl+H>."
 
 #: ../src/gtk/fm-file-properties.c:1026
-#, fuzzy
 msgid "scanning..."
-msgstr "Ntegeka..."
+msgstr "nkebera..."
 
 #: ../src/gtk/fm-file-properties.c:1088
 msgid "<b>_Access content:</b>"
 msgstr "<b>_Kukola ku birimu:</b>"
 
-#: ../src/gtk/fm-file-properties.c:1242
+#: ../src/gtk/fm-file-properties.c:1239
 msgid "Files of different types"
 msgstr "Fayiro ez'ebika ebyawufu"
 
-#: ../src/gtk/fm-file-properties.c:1286
+#: ../src/gtk/fm-file-properties.c:1283
 msgid "<b>File:</b>"
 msgstr "<b>Fayiro:</b>"
 
-#: ../src/gtk/fm-file-properties.c:1352
-#, fuzzy
+#: ../src/gtk/fm-file-properties.c:1349
 msgid "Multiple files"
 msgstr "Fayiro ezisukka mu emu"
 
@@ -982,7 +962,6 @@ msgid "_Sort Files"
 msgstr "_Sengeka fayiro"
 
 #: ../src/gtk/fm-folder-view.c:196
-#, fuzzy
 msgid "_Rename Folder..."
 msgstr "Fayiro _Gikyuse Erinnya"
 
@@ -996,12 +975,10 @@ msgstr "_Laga fayiro enkise"
 
 #. Note to translators: "Mingle..." means "Do not put folders before files" but make the translation as short as possible, please!
 #: ../src/gtk/fm-folder-view.c:207
-#, fuzzy
 msgid "Mingle _Files and Folders"
-msgstr "Tabika _fayiro n'amaterekero"
+msgstr "Tabika _Fayiro n'amaterekero"
 
 #: ../src/gtk/fm-folder-view.c:208
-#, fuzzy
 msgid "_Ignore Name Case"
 msgstr "_Tofa ku mpandika y'ennukuta z'omu linnya"
 
@@ -1026,7 +1003,6 @@ msgid "Enter a name for the newly created folder:"
 msgstr "Wandikawo erinnya ly'etterekero erikoledwawo:"
 
 #: ../src/gtk/fm-folder-view.c:846
-#, fuzzy
 msgid "Creating New Folder"
 msgstr "Nkolawo tterekero ppya"
 
@@ -1078,7 +1054,6 @@ msgid "No folders are specified."
 msgstr "Tolaze makubo."
 
 #: ../src/gtk/fm-gtk-file-launcher.c:757 ../src/gtk/fm-gtk-utils.c:554
-#, fuzzy
 msgid "Select Folder"
 msgstr "Londa tterekero"
 
@@ -1135,7 +1110,6 @@ msgid "Are you sure you want to empty the trash can?"
 msgstr "Okakasa nti oyagala okukunkumula ebisuulidwa?"
 
 #: ../src/gtk/fm-path-entry.c:668
-#, fuzzy
 msgid "Pa_ste and Go"
 msgstr "Pa_atiika otandikirewo okunoonya"
 
@@ -1278,67 +1252,77 @@ msgid ", "
 msgstr ", "
 
 #. translators: it is part of "Moving files:" or "Moving xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:579
+#: ../src/gtk/fm-progress-dlg.c:581
 #, fuzzy
 msgid "Moving"
 msgstr "Nzijulula fayiro"
 
 #. translators: it is part of "Copying files:" or "Copying xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:583
+#: ../src/gtk/fm-progress-dlg.c:585
 #, fuzzy
 msgid "Copying"
 msgstr "Nkola koppi mu fayiro"
 
 #. translators: it is part of "Trashing files:" or "Trashing xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:587
+#: ../src/gtk/fm-progress-dlg.c:589
 #, fuzzy
 msgid "Trashing"
 msgstr "Mu bisuulidwa nteekayo fayiro"
 
 #. translators: it is part of "Deleting files:" or "Deleting xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:591
-#, fuzzy
+#: ../src/gtk/fm-progress-dlg.c:593
 msgid "Deleting"
-msgstr "Nzigyawo fayiro"
+msgstr "Nzigyawo"
 
-#. translators: it is part of "Symlinking files:" or "Symlinking xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:595
-msgid "Symlinking"
+#. translators: it is part of "Creating link /path/xxx.txt"
+#: ../src/gtk/fm-progress-dlg.c:597
+msgid "Creating link"
+msgstr "Nkolawo nyunzi"
+
+#. translators: 'In:' string is followed by destination folder path
+#: ../src/gtk/fm-progress-dlg.c:599
+msgid "<b>In:</b>"
+msgstr "<b>Egende mu:</b>"
+
+#: ../src/gtk/fm-progress-dlg.c:600
+msgid "Creating links to files"
 msgstr ""
 
-#. translators: it is part of "Changing attributes of files:" or "Changing attributes of xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:602
-#, fuzzy
+#. translators: it is part of "Changing attributes of xxx.txt"
+#: ../src/gtk/fm-progress-dlg.c:607
 msgid "Changing attributes of"
 msgstr "Nkyusa atiributo za fayiro"
 
+#: ../src/gtk/fm-progress-dlg.c:608
+msgid "Changing attributes of files"
+msgstr "Nkyusa atiributo za fayiro"
+
 #. translators: it is part of "Restoring files:" or "Restoring xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:606
-#, fuzzy
+#: ../src/gtk/fm-progress-dlg.c:614
 msgid "Restoring"
-msgstr "_Zawo"
+msgstr "Nzizawo"
 
 #. note to translators: resulting string is such as "Deleting files"
-#: ../src/gtk/fm-progress-dlg.c:613
-#, fuzzy, c-format
+#: ../src/gtk/fm-progress-dlg.c:624
+#, c-format, c-format
 msgid "%s files"
-msgstr "fayiro z'ebifaananyi"
+msgstr "%s fayiro"
 
-#: ../src/gtk/fm-progress-dlg.c:615
+#: ../src/gtk/fm-progress-dlg.c:627
 msgid "<b>File operation is in progress...</b>"
 msgstr ""
 
 #. note to translators: resulting string is such as "Deleting file"
-#: ../src/gtk/fm-progress-dlg.c:619
-#, fuzzy, c-format
+#: ../src/gtk/fm-progress-dlg.c:633
+#, c-format, c-format
 msgid "<b>%s file:</b>"
-msgstr "<b>Fayiro:</b>"
+msgstr "<b>%s fayiro:</b>"
 
 #. note to translators: resulting string is such as "Deleting files"
-#: ../src/gtk/fm-progress-dlg.c:622
-#, fuzzy, c-format
+#: ../src/gtk/fm-progress-dlg.c:636
+#, c-format, c-format
 msgid "<b>%s files:</b>"
-msgstr "<b>Fayiro:</b>"
+msgstr "<b>%s fayiro:</b>"
 
 #: ../src/gtk/fm-side-pane.c:66
 msgid "_Off"
@@ -1374,12 +1358,10 @@ msgid "_Hide %s"
 msgstr "_Kisa %s"
 
 #: ../src/gtk/fm-standard-view.c:839
-#, fuzzy
 msgid "_Move Left"
 msgstr "_Sembeza ku kkono"
 
 #: ../src/gtk/fm-standard-view.c:845
-#, fuzzy
 msgid "Move _Right"
 msgstr "Sembeza ku _ddyo"
 
@@ -1389,7 +1371,6 @@ msgid "Show %s"
 msgstr "Laga %s"
 
 #: ../src/gtk/fm-standard-view.c:880
-#, fuzzy
 msgid "_Forget Width"
 msgstr "_Ereme okujjukiranga bugazi bweyaliko obwasemba"
 
@@ -1557,8 +1538,7 @@ msgstr "Nnemedwa okukolawo eky'omu menyu '%s'"
 
 #: ../src/modules/vfs-menu.c:2572
 msgid "Name of menu directory should not end with \".desktop\""
-msgstr ""
-"Erinnya ly'etterekero erya menyu terikkirizibwa kusembyayo \".desktop\""
+msgstr "Erinnya ly'etterekero erya menyu terikkirizibwa kusembyayo \".desktop\""
 
 #: ../src/modules/vfs-menu.c:2617
 msgid "Invalid operation with menu root"
@@ -1582,12 +1562,10 @@ msgid "Search"
 msgstr "Noonya"
 
 #: ../src/modules/vfs-search.c:1052
-#, fuzzy
 msgid "Search Results"
 msgstr "Ebizuulidwa"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:66
-#, fuzzy
 msgid "Choose Executable File"
 msgstr "Londa fayiro eya puloguramu"
 
@@ -1634,7 +1612,6 @@ msgid "_Use startup notification"
 msgstr "_Wabengawo akabonero akalaga nti puloguramu etandika"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:388
-#, fuzzy
 msgid "_Desktop Entry"
 msgstr "_Ekisangibwa awakolerwa"
 
